# EmbeddedLinuxStudy

C++/Classes/: accessFunctions.cpp  accessSpecifiers.cpp  constClass.cpp  constuctors.cpp  copyConstructor  copyConstructor.cpp  notes.md  simple_class.cpp
C++/Classes2/: classHead.h  classHeader.cpp  notes.md  this.cpp
C++/Inhertiance/: notes.md
C++/Pointers&References/: notes.md
C++/Templates/: functiontemplates.cpp  notes.md
C++_intermediete/Notes/: test.md
C++_intermediete/templates_basics/: CMakeLists.txt
C++_intermediete/templates_basics/include/: math.hpp
C++_intermediete/templates_basics/src/: main.cpp
C++_intermediete/testSetup/: CMakeLists.txt
C++_intermediete/variadic_templates/: CMakeLists.txt
Embedded_Linux/1-ToolChain/: notes.md  steps.md
Embedded_Linux/2-Bootloader/: notes.md  steps.md
Embedded_Linux/3-Kernel_customization/: notes.md
Embedded_Linux/4-FileSystem/: notes.md
Init_process/: notes.md
Linux/1-SystemArch/: Notes.md  main.cpp  userid
Linux/11-MonitoringKernal/: main.cpp  notes.md
Linux/2-SysCalls/: notes.md  psError
Linux/3-ProcessManagment/: notes.md
Linux/4-FileSystem/: Createfilesystem.md  notes.md
Linux/5-Terminal/: notes.md
Linux/6-Bash1/: .bashvi.sh.swp  Bash_Notes.md  bash_Basics.sh  env _bash.sh
Linux/7-Bash2/: advanced_bash.sh
Linux/8-BashProjects/: config.cfg  file_organizer.sh  process_monitor.sh
Linux/9-networking/: notes.md  notes2.md
Mqtt/: notes.md  steps.md
Mqtt/simple_temp_project/: cpu_temp_publisher.py  cpu_temp_subscriber.py  readme.md
YOCTO/1-Intro/: notes.md
(+10 files in other folders)
